# AI-Email-Sender-Crew

./: README.md
gmail_testing_final/: gmail_auth.py  gmail_send.py  pyproject.toml
gmail_testing_final/src/gmail_testing_final/: crew.py  main.py
gmail_testing_final/src/gmail_testing_final/config/: agents.yaml  tasks.yaml
